[gd_scene load_steps=3 format=3 uid="uid://catrwka02j1g0"]

[ext_resource type="Script" path="res://scripts/click_area.gd" id="1_lsa4i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8nbe"]
size = Vector2(6, 6)

[node name="ClickArea" type="Area2D"]
script = ExtResource("1_lsa4i")
debug_color = Color(0, 0, 0, 1)

[node name="ClickAreaCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_w8nbe")
debug_color = Color(0.914239, 8.45176e-05, 0.716974, 0.42)

[node name="Sprite" type="Sprite2D" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
